fix: fixed nowrap label block form

--- a/theme/ItaliaTheme/Blocks/_form.scss
+++ b/theme/ItaliaTheme/Blocks/_form.scss
@@ -59,6 +59,14 @@
       font-size: 0.77rem;
     }
 
+    input[type='checkbox'] ~ label,
+    input[type='radio'] ~ label {
+      overflow: inherit;
+      height: auto;
+      line-height: 30px;
+      white-space: normal;
+    }
+
     .form-check-group {
       label {
         width: 100%;
